// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render the component correctly with color props 1`] = `
.c0 {
  display: inline-block;
  line-height: 1;
}

.c0 svg {
  width: 100%;
  height: 100%;
}

.c0 path {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.c0 svg path {
  fill: #fff;
}

<span
  className="c0"
  color="white"
>
  <svg
    aria-labelledby="title"
    height="1em"
    role="img"
    title="arrowLeft"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0l-6.59 6.59a.996.996 0 0 0 0 1.41l6.59 6.59a.996.996 0 1 0 1.41-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
</span>
`;

exports[`should render the component correctly with only required props 1`] = `
.c0 {
  display: inline-block;
  line-height: 1;
}

.c0 svg {
  width: 100%;
  height: 100%;
}

.c0 path {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

<span
  className="c0"
>
  <svg
    aria-labelledby="title"
    height="1em"
    role="img"
    title="arrowLeft"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0l-6.59 6.59a.996.996 0 0 0 0 1.41l6.59 6.59a.996.996 0 1 0 1.41-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
</span>
`;

exports[`should render the component correctly with size props 1`] = `
.c0 {
  display: inline-block;
  line-height: 1;
  height: 30px;
}

.c0 svg {
  width: 100%;
  height: 100%;
}

.c0 path {
  -webkit-transition: fill 300ms;
  transition: fill 300ms;
}

.c0 svg {
  width: 30px;
  height: 30px;
}

<span
  className="c0"
  size="30"
>
  <svg
    aria-labelledby="title"
    height="1em"
    role="img"
    title="arrowLeft"
    viewBox="0 0 24 24"
    width="1em"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42a.996.996 0 0 0-1.41 0l-6.59 6.59a.996.996 0 0 0 0 1.41l6.59 6.59a.996.996 0 1 0 1.41-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
</span>
`;
